# attention-for-ai-bc53-codex

./: .resource_finder_complete  README.md  REPORT.md  download_datasets.py  download_papers.py  find_code.py  literature_review.md  paper_finder_results.json  paper_finder_results_fast.json  paper_notes_raw.json  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  (+3 more)
paper_search_results/: Attention_Economy_mathematical_models_internet_products_20260308_085732.jsonl  Attention_is_all_you_need_beyond_transformers_internet_field_20260308_090009.jsonl  Attention_mechanism_beyond_transformers_and_its_application_to_the_Internet_atte_20260308_085435.jsonl  attention_mechanism_beyond_transformers_generative_AI_internet_attention_economy_20260308_085524.jsonl  attention_mechanism_beyond_transformers_generative_AI_internet_attention_economy_20260308_085525.jsonl
papers/: README.md
results/: criteo_results.json  environment.json  movielens_results.json
src/: analysis.py  data_prep.py  exp1_movielens_seq.py  exp2_criteo_ctr.py  run_experiments.py
(+12 files in other folders)
